--- a/conf/prod-h.trvr.se.env
+++ b/conf/prod-h.trvr.se.env
@@ -9,3 +9,5 @@ ELASTICSEARCH_INDEX=hypothesis
 ELASTICSEARCH_URL=http://h_elasticsearch_1:9201
 MODEL_CREATE_ALL=true
 SECRET_KEY=qAzFykW9DtePtgIqdmqzh7sbFpaHQjuHWxIOfl8t7YfsjQJgq7UKoU71_X1V3I3B
+MANDRILL_USERNAME=Travrse
+MANDRILL_APIKEY=CHdPFaw7BMgLU9mm8YWolQ
