--- a/conf/prod-h.trvr.se.env
+++ b/conf/prod-h.trvr.se.env
@@ -11,3 +11,4 @@ MODEL_CREATE_ALL=true
 SECRET_KEY=qAzFykW9DtePtgIqdmqzh7sbFpaHQjuHWxIOfl8t7YfsjQJgq7UKoU71_X1V3I3B
 MANDRILL_USERNAME=Travrse
 MANDRILL_APIKEY=CHdPFaw7BMgLU9mm8YWolQ
+MAIL_DEFAULT_SENDER=alan@travr.se
