make mail_host and mail_port environment variables

--- a/conf/prod-h.trvr.se.env
+++ b/conf/prod-h.trvr.se.env
@@ -12,3 +12,5 @@ SECRET_KEY=qAzFykW9DtePtgIqdmqzh7sbFpaHQjuHWxIOfl8t7YfsjQJgq7UKoU71_X1V3I3B
 MANDRILL_USERNAME=Travrse
 MANDRILL_APIKEY=CHdPFaw7BMgLU9mm8YWolQ
 MAIL_DEFAULT_SENDER=alan@travr.se
+MAIL_HOST=smtp.mandrillapp.com
+MAIL_PORT=587
