--- a/conf/prod-h.trvr.se.env
+++ b/conf/prod-h.trvr.se.env
@@ -14,3 +14,6 @@ MANDRILL_APIKEY=RLhAQG4PdFH4uPtguwcSQw
 MAIL_DEFAULT_SENDER=alan@travr.se
 MAIL_HOST=smtp.mandrillapp.com
 MAIL_PORT=465
+CLIENT_OAUTH_ID=8501bf88-731a-11e8-8459-c7faed5f6d8b
+CLIENT_URL=https://h.travr.se/app.html
+CLIENT_RPC_ALLOWED_ORIGINS=https://h.travr.se http://localhost.com/5000 http://localhost.com/8001 https://h.travr.se/app.html
