--- a/conf/prod-h.trvr.se.env
+++ b/conf/prod-h.trvr.se.env
@@ -1,5 +1,5 @@
-APP_URL=https://h.travr.se
-AUTHORITY=h.travr.se
+APP_URL=https://travr.se
+AUTHORITY=travr.se
 BROKER_URL=amqp://guest:guest@h_rabbit_1:5672//
 CLIENT_ID=F05410E8-F0D7-4D0B-854C-A78E19CAC7C3
 CLIENT_SECRET=6lL2xDi7Wfb7V-KN3JJmtFQI_A0ECkcg3gOVxzHkLIXbVf-_Mi3GGe64zzj5IwMP
@@ -15,5 +15,5 @@ MAIL_DEFAULT_SENDER=alan@travr.se
 MAIL_HOST=smtp.mandrillapp.com
 MAIL_PORT=465
 CLIENT_OAUTH_ID=8501bf88-731a-11e8-8459-c7faed5f6d8b
-CLIENT_URL=https://h.travr.se/app.html
-CLIENT_RPC_ALLOWED_ORIGINS=https://h.travr.se http://localhost.com/5000 http://localhost.com/8001 https://h.travr.se/app.html
+CLIENT_URL=https://travr.se/app.html
+CLIENT_RPC_ALLOWED_ORIGINS=https://travr.se http://localhost.com/5000 http://localhost.com/8001 https://travr.se/app.html
