--- a/conf/app.ini
+++ b/conf/app.ini
@@ -27,6 +27,7 @@ use: egg:raven#raven
 use: egg:gunicorn
 host: 0.0.0.0
 port: 5000
+url_scheme: https
 
 [loggers]
 keys = root, alembic, gunicorn.error, h, sentry
