--- a/conf/app.ini
+++ b/conf/app.ini
@@ -27,7 +27,8 @@ use: egg:raven#raven
 use: egg:gunicorn
 host: 0.0.0.0
 port: 5000
-url_scheme: https
+secure_scheme_headers: {'X-Fordwarded-Proto': 'https'}
+forwarded-allow-ips: *
 
 [loggers]
 keys = root, alembic, gunicorn.error, h, sentry
