--- a/docker-compose-staging.yml
+++ b/docker-compose-staging.yml
@@ -25,11 +25,10 @@ services:
       - '0.0.0.0:80:4999'
       - '0.0.0.0:443:5000'
     env_file:
-      - /var/code/travrse-main/conf/prod-h.trvr.se.env
+      - /var/code/travrse-main/conf/staging-h.trvr.se.env
     volumes:
-      - /var/code/travrse-main/conf/nginx.conf:/etc/nginx/nginx.conf
-      - /etc/letsencrypt/live/travr.se/fullchain.pem:/etc/nginx/fullchain.pem
-      - /etc/letsencrypt/live/travr.se/privkey.pem:/etc/nginx/privkey.pem
+      - /var/code/travrse-main/conf/nginx-staging.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt/live/cataclysm.travr.se/fullchain.pem:/etc/nginx/fullchain.pem
+      - /etc/letsencrypt/live/cataclysm.travr.se/privkey.pem:/etc/nginx/privkey.pem
       - /etc/letsencrypt/options-ssl-nginx.conf:/etc/nginx/options-ssl-nginx.conf
       - /etc/letsencrypt/ssl-dhparams.pem:/etc/nginx/ssl-dhparams.pem
-      - /var/www/travrse-landing-page/homepage:/var/www/html
