Nginx configuration changes for production

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -24,10 +24,16 @@ http {
   upstream websocket { server unix:/tmp/gunicorn-websocket.sock fail_timeout=0; }
 
   server {
-    listen 5000;
+    listen [::]:5000 ssl; # managed by Certbot
+    listen 5000 ssl; # managed by Certbot
 
-    server_name _;
+    server_name travr.se;
     server_tokens off;
+
+    ssl_certificate /etc/nginx/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/nginx/privkey.pem; # managed by Certbot
+    include /etc/nginx/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/nginx/ssl-dhparams.pem; # managed by Certbot
 
     root /var/www;
 
@@ -66,6 +72,7 @@ http {
       proxy_set_header X-Forwarded-Server $http_host;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Request-Start "t=${msec}";
+      proxy_set_header X-Forwarded-Ssl on;
     }
   }
 
@@ -80,4 +87,23 @@ http {
       deny all;
     }
   }
+
+  server {
+          listen 4999;
+          listen [::]:4999;
+
+          root /var/www/html;
+
+    if ($host = travr.se) {
+        return 301 https://travr.se$request_uri;
+    }
+
+    if ($host = www.travr.se) {
+        return 301 https://travr.se$request_uri;
+    }
+
+    server_name travr.se;
+    return 404;
+  }
+
 }
